--- a/sass/_marbles.scss
+++ b/sass/_marbles.scss
@@ -13,6 +13,12 @@ $n: length($colors);
   }
 }
 
+.marble-stream h2 {
+  margin: 0 0 -15px 0;
+  color: #444;
+  font-size: 14pt;
+}
+
 .marble-line {
   stroke: #aaa;
   stroke-width: 1px;
