dependency upgrade, small tweaks to min/max

--- a/sass/_number-line.scss
+++ b/sass/_number-line.scss
@@ -2,6 +2,10 @@
   margin-left: 20px;
 }
 
+.number-line__title {
+  font-size: 22pt;
+}
+
 .number-line__number-line {
   stroke: #ccc;
   stroke-width: 3px; 
